# agentic-retail-foundations

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  base.py  bayesian.py  bdi.py  conversation_manager.py  cross_functional.py  cv.py  dynamic_pricing_feedback.py  fulfillment.py  inventory.py  inventory_orchestration.py  knowledge_graph.py  llm.py  llm_components.py  llm_context_retriever.py  messaging.py  ooda.py  orchestrator.py  planning.py  promotion_causal.py  prompts.py  qlearning.py  replenishment.py  response_builder.py  sensor.py  store.py  task_allocation.py
agents/causal_analysis/: __init__.py  counterfactual.py  data_preparation.py  estimators.py  graph.py  roi.py
agents/coordinators/: product_launch.py
agents/cross_functional/: __init__.py  customer_service.py  marketing.py  pricing.py  store_ops.py  supply_chain.py
agents/protocols/: auction.py  contract_net.py  inventory_sharing.py
config/: config.py
connectors/: dummy_db.py  dummy_inventory_system.py  dummy_order_system.py  dummy_planogram_db.py
demos/: agent_communication_demo.py  api_gateway_demo.py  dynamic_pricing.py  dynamic_pricing_agent_demo.py  dynamic_pricing_feedback_demo.py  fulfillment_planning_demo.py  inventory_api_demo.py  inventory_management_agent_demo.py  inventory_sharing_demo.py  openai_agents_multi_agent_demo.py  order_orchestration_demo.py  procurement_auction_demo.py  product_launch_demo.py  recommendation.py  spark_streaming_demo.py  state_manager_demo.py  task_allocation_cnp_demo.py  virtual_shopping_assistant_demo.py
docs/: contributing.md  index.md  introduction.md  setup.md
docs/concepts/: agents.md  models.md  utils.md
docs/examples/: index.md
docs/reference/: agents.md  models.md  utils.md
environments/: mdp.py
models/: api.py  customer.py  enums.py  events.py  fulfillment.py  inventory.py  messaging.py  pricing.py  procurement.py  state.py  store.py  supplier.py  task.py
models/dummy_detection_model/: fingerprint.pb  saved_model.pb
notebooks/: agent-architectures-and-frameworks.py  core-technologies-enabling-agentic-retail.py  decision-making-frameworks-for-retail-agents.py  end-to-end-integration-for-autonomous-retail.py  ethical-considerations-and-governance.py  implementing-agentic-systems-in-retail.py  intro.py  multi-agent-systems-in-retail.py  real-world-case-studies.py  sensor-networks-and-cognitive-systems.py
tests/: conftest.py  mocks.py  test_bdi.py  test_mdp_qlearning.py  test_nlp.py  test_ooda.py  test_response_builder.py
tests/agents/: test_base.py  test_bdi.py  test_cv.py  test_dynamic_pricing_feedback.py  test_fulfillment.py  test_knowledge_graph.py  test_llm.py  test_llm_components.py  test_ooda.py  test_orchestrator.py  test_promotion_causal.py  test_qlearning.py  test_response_builder.py  test_sensor.py  test_store.py  test_task_allocation.py
tests/agents/causal_analysis/: test_counterfactual.py  test_data_preparation.py  test_estimators.py  test_graph.py  test_roi.py
tests/agents/cross_functional/: test_customer_service.py  test_marketing.py  test_pricing.py  test_store_ops.py  test_supply_chain.py
tests/config/: test_config.py
tests/connectors/: test_dummy_db.py  test_dummy_inventory_system.py  test_dummy_order_system.py  test_dummy_planogram_db.py
tests/environments/: test_mdp.py  test_mdp_qlearning.py
tests/models/: test_inventory_store.py  test_messaging.py
tests/utils/: test_crdt.py  test_data_generation.py  test_env.py  test_event_bus.py  test_monitoring.py  test_nlp.py  test_openai_utils.py  test_planning.py
utils/: __init__.py  crdt.py  data_generation.py  env.py  event_bus.py  logger.py  monitoring.py  nlp.py  openai_utils.py  planning.py
